Use Java 11 File.readString()