@@ -189,7 +189,7 @@ class BeaconsControllerIntegrationTest {
   }
 
   private String readFile(String filePath) throws IOException {
-    return new String(Files.readAllBytes(Paths.get(filePath)));
+    return Files.readString(Paths.get(filePath));
   }
 
   private WebTestClient.BodyContentSpec createNote(String beaconId)
