@@ -113,6 +113,6 @@ class NoteControllerIntegrationTest {
   }
 
   private String readFile(String filePath) throws IOException {
-    return new String(Files.readAllBytes(Paths.get(filePath)));
+    return Files.readString(Paths.get(filePath));
   }
 }
