@@ -124,7 +124,7 @@ class RegistrationsControllerIntegrationTest {
   }
 
   private String readFile(String filePath) throws IOException {
-    return new String(Files.readAllBytes(Paths.get(filePath)));
+    return Files.readString(Paths.get(filePath));
   }
 
   enum RegistrationUseCase {
